Fix Italian Spacing Issue with "Note:"
The Italian translation of "Note:" was overlapping the note content. CSS
updated.

--- a/source/css/documentation_l10n.scss
+++ b/source/css/documentation_l10n.scss
@@ -114,7 +114,7 @@
  }
 }
 
-.ru, .pt-BR, .pt-PT, .es, .sv, .fr, .nl {
+.ru, .pt-BR, .pt-PT, .es, .sv, .fr, .nl, .it {
  .note {
   .note-content {
    max-width: 74%;
